# cysh

./: .env.example  .eslintrc.cjs  .gitignore  .lintstagedrc.json  Anchor.toml  BOT_READY.md  Cargo.toml  HACKATHON_PITCH.md  IMPLEMENTATION_COMPLETE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICKSTART_DB.md  README.md  STATUS_REPORT.md  TECHNICAL_STACK.md  TELEGRAM_BOT_HANDOFF.md  TODO.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
app/telegram-bot/: .gitkeep  README.md  package.json
app/telegram-bot/src/: index.ts
app/telegram-bot/src/commands/: balance.ts  cancel.ts  help.ts  index.ts  kyc.ts  order.ts  start.ts  status.ts
app/telegram-bot/src/config/: env.ts
app/telegram-bot/src/handlers/: callbacks.ts  order-submission.ts
app/telegram-bot/src/lib/: prisma.ts
app/telegram-bot/src/middleware/: error-handler.ts  logging.ts
app/telegram-bot/src/services/: index.ts  kyc-service.ts  match-notifier.ts
app/telegram-bot/src/utils/: wallet-verification.ts
docs/: ARCIUM_CLUSTER_4040404.md  DEVELOPER_HANDOFF.md
prisma/: schema.prisma
programs/arcium-matching/: ARCIUM_STRUCTURE.md  Anchor.toml  Arcium.toml  package.json  tsconfig.json
programs/arcium-matching/encrypted-ixs/src/: lib.rs
programs/arcium-matching/tests/: arcium_matching.ts  match-orders.ts
programs/settlement/: Anchor.toml  Cargo.toml  tsconfig.json
programs/settlement/programs/settlement/: Cargo.toml
programs/settlement/programs/settlement/src/: lib.rs
programs/settlement/tests/: atomic-swap.test.ts  package.json  settlement.test.ts  token22-swap.test.ts  tsconfig.json
public/circuits/: add_together.arcis  match_orders.arcis
scripts/: init-confidential-account.ts  init-token22-mint.ts
src/lib/: prisma.ts
(+2 files in other folders)
