[workspace]
resolver = "2"

# Note: programs/arcium-matching/ is a separate Arcium workspace
# Build it using: cd programs/arcium-matching && arcium build
# The Arcium toolchain requires its own workspace structure

members = [
    "programs/settlement",
    "programs/compliance",
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
