[package]
name = "settlement"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "settlement"

[features]
default = []
# ER feature disabled - ephemeral-rollups-sdk v0.3.4 incompatible with current Solana toolchain
# er = ["dep:ephemeral-rollups-sdk"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.32.1"
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
solana-program = "2.3.0"
# ephemeral-rollups-sdk = { version = "0.3.4", optional = true, default-features = false, features = ["anchor"] }
# Force base64ct to 1.7.3 to avoid edition2024 requirement
base64ct = "=1.7.3"
